--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-  <a href="scan://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">click here</a>
+  <a href="scan://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">with scan schem</a>
+  <br>
+  <a href="https://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">with https</a>
+  <br>
+  <a href="http://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">with http</a>
 </body>
 
 </html>
