--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   <a href="https://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">with https</a>
   <br>
   <a href="http://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">with http</a>
+  <br>
+  <br>
+  <a href="scan://play.google.com/store/apps/details?id=ch.noury">play store</a>
+  <a href="https://play.google.com/store/apps/details?id=ch.noury">play store</a>
+  <br>
+  <a href="scan://apps.apple.com/ch/app/noury/id1577361582">app store</a>
+  <a href="http://apps.apple.com/ch/app/noury/id1577361582">app store</a>
+  <br>
 </body>
 
 </html>
