--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
   <a href="http://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">with http</a>
   <br>
   <br>
-  <a href="scan://play.google.com/store/apps/details?id=ch.noury">play store</a>
+  <a href="scan://">scna play store</a>
   <a href="https://play.google.com/store/apps/details?id=ch.noury">play store</a>
   <br>
-  <a href="scan://apps.apple.com/ch/app/noury/id1577361582">app store</a>
+  <a href="scan://apps.apple.com/ch/app/noury/id1577361582">scan app store</a>
   <a href="http://apps.apple.com/ch/app/noury/id1577361582">app store</a>
+  <br><br><br>
+  <hr>
+  <a href="scan://app.noury.ch">app store</a><br>
+  <a href="http://app.noury.ch">app store</a>
   <br>
 </body>
 
