--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <a href="scan://app.noury.ch">app store</a><br>
   <a href="http://app.noury.ch">app store</a>
   <br>
+  <hr>
+  <a href="https://api.noury.ch">api noury ch</a>
 </body>
 
 </html>
