--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <a href="http://app.noury.ch">app store</a>
   <br>
   <hr>
-  <a href="scan://tabnav/home/openFridge/https://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">api noury ch</a>
+  <a href="scan://https://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">api noury ch</a>
 </body>
 
 </html>
