--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <a href="http://app.noury.ch">app store</a>
   <br>
   <hr>
-  <a href="scan://https://api.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-28-4-2022-977631">api noury ch</a>
+  <a href="scan://https://noury-api.galleonproject.com/api/cabinets-callbacks/qr-code?cabinet_id=if-12-04-2021-d864">go to the app</a>
+  <a href="scan://https://api.stage.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-27-4-2022-f6bb73"> go to the app 2</a>
 </body>
 
 </html>
