--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -27,13 +27,13 @@
   <br>
   <hr>
   <a href="scan://https://noury-api.galleonproject.com/api/cabinets-callbacks/qr-code?cabinet_id=if-12-04-2021-d864">go to the app</a>
-  <a href="scan://https://api.stage.noury.ch/api/cabinets-callbacks/qr-code?cabinet_id=if-27-4-2022-f6bb73"> go to the app 2</a>
+  <a href="scan://tabnav/home/openWithDeepLink/cabinet_id=if-27-4-2022-f6bb73"> go to the app 2</a>
 </body>
 
-</html> -->
+</html>
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -87,3 +87,4 @@
     </script>
 </body>
 </html>
+ -->
